<resources>
    <string name="app_name">Tamagotchi</string>
    <string name="welcome_back_to_tamagotchi">Welcome back to Tamagotchi</string>
    <string name="login">login</string>
    <string name="enter_password">Enter password</string>
    <string name="welcome_to_tamagotchi">Welcome to tamagotchi</string>
    <string name="enter_username">Enter username</string>
    <string name="logged_in">LOGGED IN</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">submit</string>
    <string name="edit_pet_settings">Edit Pet Settings</string>
    <string name="enter_pet_name">Enter Pet Name</string>
    <string name="enter_pet_type">Enter Pet Type</string>
    <string name="enter_pet_color">Enter Pet Color</string>
    <string name="save_settings">Save Settings</string>
    <string name="play_game">Play game</string>
    <string name="mini_game">Mini Game</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>

    <string name="admin_panel">Admin Panel</string>
    <string name="add_pet">Add Pet</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_species">Pet Species</string>
    <string name="add_pet_">add Pet</string>

    <string name="reset">Reset</string>
    <string name="clear">Clear</string>

    <string name="add_pet">Add Pet</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_species">Pet Species</string>
    <string name="add_pet_">add Pet</string>


</resources>