<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:id="@+id/settingsTitle"
        android:textSize="42sp"
        android:text="@string/edit_pet_settings"
        android:layout_margin="16dip"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="30dip"
        />
    <EditText
        android:id="@+id/petnameSetting"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:gravity="center"
        android:textSize="24sp"
        android:inputType="text"
        android:hint="@string/enter_pet_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle"
        />
    <EditText
        android:id="@+id/pettypeSetting"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:gravity="center"
        android:textSize="24sp"
        android:inputType="text"
        android:hint="@string/enter_pet_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petnameSetting"
        />
    <EditText
        android:id="@+id/petcolorSetting"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:gravity="center"
        android:textSize="24sp"
        android:inputType="text"
        android:hint="@string/enter_pet_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pettypeSetting"
        />
    <Button
        android:id="@+id/settingButton"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_margin="16dp"
        android:text="@string/save_settings"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petcolorSetting"
        />

</androidx.constraintlayout.widget.ConstraintLayout>